package com.nashss.se.ClimbingGymCompanionService.activity;

public class GetRouteActivity {
}
