package com.nashss.se.ClimbingGymCompanionService.activity;

public class UpdateClimbActivity {
}
