package com.nashss.se.ClimbingGymCompanionService.enums;

public enum routeType {
    BOULDER,
    TOP_ROPE,
    LEAD_CLIMB,
    AUTO_BELAY
}
