package com.nashss.se.ClimbingGymCompanionService.models;

public class RouteModel {
}
