package com.nashss.se.ClimbingGymCompanionService.models;

public class ClimbModel {
}
